# scout-research-agent

./: README.md
backend/: .env.example  .gitignore  main.py  pyproject.toml
backend/api/routes/: chat.py  report.py  sessions.py  workflow.py
backend/core/: config.py  database.py  logging_config.py
backend/graph/: edges.py  state.py  workflow.py
backend/graph/nodes/: analyzer.py  planner.py  quality_check.py  report_generator.py  researcher.py
backend/models/: chat.py  session.py
backend/services/: exa_client.py  llm.py  pdf_generator.py  progress.py  prompts.py
docs/: architecture.md  engineering-decisions.md  product-improvements.md
frontend/: index.html  package.json
frontend/public/fonts/Web Fonts/: Web Fonts Demo.html
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: ChatInterface.module.css  ChatInterface.tsx  Dashboard.module.css  Dashboard.tsx  NewResearchModal.tsx  ProfileMenu.tsx  ReportCard.tsx  ResearchChat.module.css  ResearchChat.tsx  ResearchProgress.module.css  ResearchProgress.tsx  Sidebar.module.css  Sidebar.tsx
frontend/src/components/chat-interface/: ChatInterface.tsx  ResearchChat.module.css  ResearchChat.tsx
frontend/src/components/dashboard/: Dashboard.module.css  Dashboard.tsx  ReportCard.module.css  ReportCard.tsx
frontend/src/components/profile/: ProfileMenu.module.css  ProfileMenu.tsx
frontend/src/components/research-agent/: NewResearchModal.module.css  NewResearchModal.tsx  (+1 more)
frontend/src/lib/: api.ts  http.ts  types.ts
frontend/src/routes/: chat.ts  index.ts  report.ts  sessions.ts  workflow.ts
(+4 files in other folders)
