[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=25.1.0",
    "exa-py>=2.13.2",
    "fastapi>=0.137.0",
    "httpx>=0.28.1",
    "langchain>=1.3.9",
    "langchain-core>=1.4.7",
    "langchain-groq>=1.1.3",
    "langchain-openai>=1.3.2",
    "langgraph>=1.2.5",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "sqlmodel>=0.0.38",
    "sse-starlette>=3.4.4",
    "uvicorn[standard]>=0.49.0",
    "weasyprint>=69.0",
]
